corrected spacing of navbar

--- a/frontend/src/styles/AboutPage.css
+++ b/frontend/src/styles/AboutPage.css
@@ -5,11 +5,12 @@
 
 /* HERO */
 .hero-about {
-  height: 70vh;
+  height: 80vh;
   background-image: url("../../public/assets/bg.png");
   background-size: cover;
   background-position: center;
   position: relative;
+  top: -87px;
 }
 
 .hero-overlay {
@@ -25,7 +26,7 @@
   color: white;
   text-align: center;
   padding: 20px;
-  border-radius: 25px;
+  /* border-radius: 25px; */
 }
 
 .hero-about h1 {
